^ site.css, making result sidebar with less padding, more aligned to top of panels. Fixing mobile styles, cleaning up stylsheet.

--- a/Content/site.css
+++ b/Content/site.css
@@ -41,12 +41,15 @@ a:focus {
 .savings-placeholder, .savings-container{
     z-index:9999;
 }
-.savings>div{
-    font-size: 150%;
-    text-align: center;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
+.savings .savings-text,
+.savings .savings-amount {
     margin-left: -15px;
     margin-right: -15px;
+    text-align: center;
+}
+.savings .savings-amount{
+    font-size: 150%;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
 }
 .savings>div:last-child {
     margin-bottom: 5px;
@@ -128,7 +131,7 @@ div.rounded {
     background-color: #edf0f7;
 }
 .bernie-calc .panel-heading {
-    font-size: 23px;
+    font-size: 22px;
     font-weight: 200;
     text-transform: uppercase;
     background-color: #147FD7;
